--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,57 +1,11 @@
 - name: "Install required software"
   tags: install
-  dnf:
-    state: latest
-    name:
-    - httpd
-    - python3-libselinux
-    - python3-policycoreutils
+  include_tasks: install.yml
 
-- name: "Allow services in firewall"
+- name: "Configure firewall"
   tags: firewall
-  firewalld:
-    service: "{{ item[1] }}"
-    state: enabled
-    permanent: yes
-    immediate: yes
-    zone: "{{ item[0]['name'] }}"
-  loop: "{{ firewalld['zones'] | subelements('services') }}"
+  include_tasks: firewall.yml
 
-- name: "Allow ports in firewall"
-  tags: firewall
-  firewalld:
-    port: "{{ item[1] }}/tcp"
-    state: enabled
-    permanent: yes
-    immediate: yes
-    zone: "{{ item[0]['name'] }}"
-  loop: "{{ firewalld['zones'] | subelements('ports') }}"
-
-- name: "Allow ports in SELinux"
-  tags: firewall
-  seport:
-    ports: "{{ item | string }}"
-    proto: tcp
-    setype: http_port_t
-  loop: "{{ firewalld['zones'] | map(attribute='ports') | flatten | unique }}"
-
-- name: "Set 'Listen' ports in 'httpd.conf'"
+- name: "Configure httpd"
   tags: config
-  lineinfile:
-    path: /etc/httpd/conf/httpd.conf
-    regex: "Listen"
-    line: "Listen {{ item }}"
-    validate: httpd -t -f %s
-  loop: "{{ conf['Listen'] }}"
-  notify: "Restart httpd service"
-
-- name: "Create VirtualHosts in 'virtualhosts.conf'"
-  tags: config
-  template:
-    src: virtualhosts.ji2
-    dest: /etc/httpd/conf.d/virtualhosts.conf
-    group: apache
-    mode: 0644
-    setype: httpd_config_t
-    validate: httpd -t -f %s
-  notify: "Restart httpd service"
+  include_tasks: config.yml
