Inherit common service role to install required rpms and allow services/ports in firewall Prefix all variables with role name Prefix all tag names according to task hierarchy

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,15 +1,6 @@
-firewalld:
-  zones: 
-  - name: public
-    services:
-    - http
-    - https
-    ports:
-    - 80
-conf:
-  Listen:
-  - 80
-VirtualHosts:
+apache_VirtualHosts:
 - ServerName: "{{ inventory_hostname }}"
+  Listen: 80
   ServerAlias: "{{ inventory_hostname }}"
   DocumentRoot: /var/www/html
+
