--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,5 +1,5 @@
 - name: "Create VirtualHosts in 'virtualhosts.conf'"
-  tags: vhost
+  tags: apache-config-vhost
   template:
     src: virtualhosts.ji2
     dest: /etc/httpd/conf.d/virtualhosts.conf
@@ -9,11 +9,11 @@
   notify: "Restart httpd service"
 
 - name: "Set 'Listen' ports in 'httpd.conf'"
-  tags: httpd
+  tags: apache-config-httpd
   lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regex: "Listen"
     line: "Listen {{ item }}"
     validate: httpd -t -f %s
-  loop: "{{ conf['Listen'] }}"
+  loop: "{{ apache_VirtualHosts | map(attribute='Listen') | list }}"
   notify: "Restart httpd service"
