[fix] apache_rpms -> apache_pkgs

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -49,5 +49,5 @@ galaxy_info:
 dependencies:
 - role: service
   vars:
-    service_pkgs: "{{ apache_rpms }}"
+    service_pkgs: "{{ apache_pkgs }}"
     service_firewalld: "{{ apache_firewalld }}"
