Move SELinux task to separate file.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
-- name: "Configure httpd"
+- name: "Configure httpd server"
   tags:
   - apache
+  - apache-config
   import_tasks: config.yml
+
+- name: "Configure SELinux for httpd server"
+  tags:
+  - apache
+  - apache-selinux
+  import_tasks: selinux.yml
