--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,4 +1,18 @@
 ---
+- name: "Create conf.d includes"
+  tags: httpd.config.includes
+  ansible.builtin.template:
+    src: directives.ji2
+    dest: "{{ httpd_config['virtualhosts'] | dirname }}/{{ item['name'] }}.conf"
+    owner: "{{ httpd_config['owner'] }}"
+    group: "{{ httpd_config['group'] }}"
+    mode: "{{ httpd_config['mode'] }}"
+    setype: "{{ httpd_config['setype'] }}"
+  loop: "{{ httpd_configs }}"
+  loop_control:
+    label: "{{ httpd_config['virtualhosts'] | dirname }}/{{ item['name'] }}.conf"
+  notify: "Restart httpd service"
+
 - name: "Create VirtualHosts in 'virtualhosts.conf'"
   tags: httpd.config.vhost
   ansible.builtin.template:
@@ -8,6 +22,7 @@
     group: "{{ httpd_config['group'] }}"
     mode: "{{ httpd_config['mode'] }}"
     setype: "{{ httpd_config['setype'] }}"
+  when: httpd_VirtualHosts | length > 0
   notify: "Restart httpd service"
 
 - name: "Set 'Listen' ports in 'httpd.conf'"
