Add httpd_configs - conf.d includes.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ httpd_firewalld:
       ports: []
 
 
+httpd_configs: []
+
 httpd_VirtualHosts:
   - ServerName: "{{ inventory_hostname }}"
     Listen: 80
