Use role handlers (not inherited from service role) due to import_role variable overwrite.

--- a/handlers/main.yaml
+++ b/handlers/main.yaml
@@ -1,6 +1,8 @@
 ---
 - name: "Restart httpd service"
-  service:
-    enabled: true
+  ansible.builtin.service:
+    name: "{{ service_name }}"
     state: restarted
-    name: "{{ httpd_service }}"
+    enabled: true
+  become: true
+  when: test_dir is not defined
