--- a/handlers/main.yaml
+++ b/handlers/main.yaml
@@ -1,7 +1,7 @@
 ---
 - name: "Restart httpd service"
   ansible.builtin.service:
-    name: "{{ service_name }}"
+    name: "{{ httpd_service }}"
     state: restarted
     enabled: true
   become: true
